src/objects/Transaction_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Closing_Balance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Closing Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit__c</fullName>
        <label>Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Debit__c</fullName>
        <label>Debit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <description>A unique id for the element.</description>
        <label>Id</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MF_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MF Account</label>
        <referenceTo>MF_Account__c</referenceTo>
        <relationshipLabel>Transaction Entries</relationshipLabel>
        <relationshipName>TransactionEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opening_Balance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Opening Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Readonly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Readonly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Savings_Sub_Ledger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Savings Sub Ledger</label>
        <referenceTo>Savings_Account__c</referenceTo>
        <relationshipLabel>Transaction Entries</relationshipLabel>
        <relationshipName>Transaction_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_Ledger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Ledger</label>
        <referenceTo>Loan_Account__c</referenceTo>
        <relationshipLabel>Transaction Entries</relationshipLabel>
        <relationshipName>Transaction_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ToBeDeleted__c</fullName>
        <label>ToBeDeleted</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <formula>Transaction__r.Transaction_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <label>Transaction</label>
        <referenceTo>Transaction__c</referenceTo>
        <relationshipName>TransactionEntries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Transaction Entry</label>
    <nameField>
        <displayFormat>TEID-{0000000000}</displayFormat>
        <label>Transaction Entry ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Account_not_null</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL(VLOOKUP($ObjectType.MF_Account__c.Fields.Name, $ObjectType.MF_Account__c.Fields.Name,  MF_Account__r.Name  ))</errorConditionFormula>
        <errorDisplayField>MF_Account__c</errorDisplayField>
        <errorMessage>Enter a valid account</errorMessage>
    </validationRules>
</CustomObject>